# Nemotron-Agentic-Fine-Tuning-Pipeline

./: .gitignore  README.md  pyproject.toml
dags/: agentic_pipeline_dag.py
docker/: .env.example  Dockerfile.airflow  Dockerfile.trainer  docker-compose.yml
models/: Modelfile
scripts/: evaluate.py  export_gguf.py  train_model.py
